# nogo-analyzer-bzlmod

./: .gitattributes  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  def.bzl  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
staticcheck/: BUILD.bazel  analyzer.go
staticcheck/util/: BUILD.bazel  directive.go  util.go
