load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "util",
    srcs = [
        "directive.go",
        "util.go",
    ],
    importpath = "github.com/jaeyeom/nogo-analyzer-bzlmod/staticcheck/util",
    visibility = ["//visibility:public"],
    deps = [
        "@co_honnef_go_tools//analysis/lint",
        "@co_honnef_go_tools//quickfix",
        "@co_honnef_go_tools//simple",
        "@co_honnef_go_tools//staticcheck",
        "@co_honnef_go_tools//stylecheck",
        "@co_honnef_go_tools//unused",
        "@org_golang_x_tools//go/analysis",
    ],
)
